lab1/Test/L1-A-6-83.output
Error Type B at Line 2
Error Type B at Line 5
Error Type A at Line 7
Error Type A at Line 7
Error Type A at Line 7
