lab1/Test/L1-A-6-83.cmm
float 
struct EWjZr39084y iJs0nd5V5D2q37ynhN ( ) {
  float clpXgxlrYdzFX = - YhuY9p5RWgJ4KiwB = RgE4iynD4h 
    , mr3TAL945iUIn2jGME [ 1107764112 ] [ 1895209836 ] 
    [ ] , qfjMuTuz ;
}
@'`